# Wordle-

./: .gitignore  .replit  CMakeLists.txt  Makefile  README.md  funciones.cpp  tests  tests[1]_include.cmake  tests[1]_tests.cmake  wordle.cpp
newTest/: tests.cpp
tests/: tests.cpp
